[gd_scene load_steps=7 format=3 uid="uid://dgdpmuyqpib7g"]

[ext_resource type="Script" path="res://src/states/menus/main_menu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://8mcdanshabkp" path="res://src/states/menus/buttons/fancy_button.tscn" id="3_6r4ns"]
[ext_resource type="FontFile" uid="uid://dy2og8k4ftrsm" path="res://assets/fonts/Aileron-Regular.otf" id="4"]
[ext_resource type="PackedScene" uid="uid://codcvc4u3ey1q" path="res://src/states/menus/create_game_menu.tscn" id="4_2l6vq"]
[ext_resource type="PackedScene" uid="uid://gwhetrsj3e6r" path="res://src/states/menus/join_game_menu.tscn" id="5_amncs"]

[sub_resource type="Theme" id="Theme_wvon7"]
default_font = ExtResource("4")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="C" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="V" type="VBoxContainer" parent="C"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="C/V"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Godot Shooter"

[node name="V" type="VBoxContainer" parent="C/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 7.5
theme_override_constants/separation = 8

[node name="G" type="GridContainer" parent="C/V/V"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="NameLabel" type="Label" parent="C/V/V/G"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Name"

[node name="NameLineEdit" type="LineEdit" parent="C/V/V/G"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_wvon7")
text = "Guest"
max_length = 20
caret_blink = true
caret_blink_interval = 0.5

[node name="CreateButton" parent="C/V/V" instance=ExtResource("3_6r4ns")]
unique_name_in_owner = true
layout_mode = 2
text = "Create Game"

[node name="JoinButton" parent="C/V/V" instance=ExtResource("3_6r4ns")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="FreePlayButton" parent="C/V/V" instance=ExtResource("3_6r4ns")]
unique_name_in_owner = true
layout_mode = 2
text = "Free Play"

[node name="CreditsButton" parent="C/V/V" instance=ExtResource("3_6r4ns")]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="QuitButton" parent="C/V/V" instance=ExtResource("3_6r4ns")]
layout_mode = 2
text = "Quit"

[node name="PopupLayer" type="CanvasLayer" parent="."]

[node name="CreateGameMenu" parent="PopupLayer" instance=ExtResource("4_2l6vq")]
unique_name_in_owner = true
visible = false

[node name="JoinGameMenu" parent="PopupLayer" instance=ExtResource("5_amncs")]
unique_name_in_owner = true
visible = false

[node name="Popup" type="AcceptDialog" parent="PopupLayer"]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(300, 200)
dialog_text = "Server Disconnected

Another player with that name is already in the server, please choose a new one."
dialog_autowrap = true

[connection signal="text_changed" from="C/V/V/G/NameLineEdit" to="." method="name_text_changed"]
[connection signal="pressed" from="C/V/V/CreateButton" to="." method="open_create_window"]
[connection signal="pressed" from="C/V/V/JoinButton" to="." method="open_join_window"]
[connection signal="pressed" from="C/V/V/FreePlayButton" to="." method="free_play_session"]
[connection signal="pressed" from="C/V/V/CreditsButton" to="." method="go_to_credits"]
[connection signal="pressed" from="C/V/V/QuitButton" to="." method="quit_game"]
[connection signal="create_game" from="PopupLayer/CreateGameMenu" to="." method="create_session"]
[connection signal="host_game" from="PopupLayer/CreateGameMenu" to="." method="host_session"]
[connection signal="error" from="PopupLayer/JoinGameMenu" to="." method="show_popup"]
[connection signal="join_game" from="PopupLayer/JoinGameMenu" to="." method="join_session"]
